--- a/src/components/crud-swr/style.css
+++ b/src/components/crud-swr/style.css
@@ -1,3 +1,10 @@
+.main {
+    display: flex;
+    justify-content: center;
+}
+.wrapper {
+    width: 60%;
+}
 .subText {
     text-align: initial;
 }
